correcting content element styles on smaller devices

--- a/src/app/stylus/mobile-styles.styl
+++ b/src/app/stylus/mobile-styles.styl
@@ -2,8 +2,8 @@
     body
         width 100% !important
         font-size 1em !important
-    .content
-        width 100%
+    #content
+        padding 0 1% !important
 
 @media (max-width 990px)
     .tooltip
